@@ -78,3 +78,4 @@ Jan 1: Was slacking off all winter break trying to come back. Finished fixpipe m
 Jan 2-3: trying to implicate fixpipe minigame in Game. tough.
 Jan 6: trying.
 Jan 7: Need to add event list and all bugs are fixed | Pipefix minigame technically works.
+Jan 7(Home): Pipefix working. need to fix minor bugs add effect in basement, finish story and add sounds.
